deps/v8/test/message/fail/modules-import-redeclare3.mjs
// Copyright 2016 the V8 project authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

import {y, x, z} from "modules-import-redeclare1.mjs";
export let x = 42;
