deps/v8/test/message/fail/modules-import-redeclare3.out
*%(basename)s:8: SyntaxError: Identifier 'x' has already been declared
export let x = 42;
           ^
SyntaxError: Identifier 'x' has already been declared

